fixed image on newsroom page

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,14 @@ article {
 article h2 {
 	color: #38303F;
 }
+article img {
+	margin: 12px;	
+	margin-top: 0;
+	float: right;
+}
+article img:nth-of-type(2n) {
+	float: left;
+}
 section {
 	/*border-bottom: 1px solid #053c62;*/
 }
